# speedy-xml

./: Cargo.toml  LICENSE  README.md
src/: escape.rs  lib.rs  lut.rs  reader.rs  writer.rs
