[package]
name = "speedy-xml"
description = "A RapidXML-compatible XML parser"
repository = "https://github.com/afishhh/speedy-xml"
version = "0.1.0"
edition = "2021"
keywords = ["xml", "parser", "writer"]
categories = ["encoding", "parsing", "parser-implementations"]
authors = ["afishhh"]
license = "MIT"
publish = true

[dependencies]
memchr = "2"
